--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "𝚃𝙷𝙴 𝙼𝙰𝙵𝙸𝙰𝙱𝙾𝚃",
   "description": "The MafiaBot made by @H1M4N5HU0P special thanks to respective HellBot owner @Kraken_The_BadASS. Join for updates related info @MafiaBot_Support",
-  "logo": "https://telegra.ph/file/75229ba894ef780332815.jpg",
+  "logo": "https://telegra.ph/f ile/75229ba894ef780332815.jpg",
     "keywords": [
     "telegram",
     "userbot",
@@ -9,7 +9,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/H1M4N5HU0P/MAFIABOT/",
+  "repository": "https://github.com/rahul03040/MAFIABOT/",
   "website": "https://github.com/H1M4N5HU0P/MAFIABOT/",
   "success_url": "https://t.me/MAFIABOT_SUPPORT",
   "env": {
